--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -10,8 +10,7 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
-permissions:
-  contents: write-all
+permissions: write-all
 
 jobs:
   build:
