--- a/src/OwaspDemo/OwaspDemo.csproj
+++ b/src/OwaspDemo/OwaspDemo.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NetEscapades.AspNetCore.SecurityHeaders" Version="0.18.0" />
+  </ItemGroup>
+
 </Project>
